--- a/index.html
+++ b/index.html
@@ -3,69 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DApp Interaksi dengan Smart Contract</title>
+  <title>DApp untuk Korban Berinteraksi dengan Smart Contract</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ethers/5.7.2/ethers.umd.min.js"></script>
 </head>
 <body>
 
-<h1>Interact with Smart Contract</h1>
+<h1>Interact with Smart Contract as Victim</h1>
 
 <!-- Connect Wallet Button -->
 <button id="connectWallet">Connect Wallet</button>
 
-<!-- Form to Approve Tokens -->
-<h2>Approve Tokens</h2>
-<form id="approveForm">
-  <label for="spender">Spender Address:</label>
-  <input type="text" id="spender" name="spender" required><br><br>
+<!-- Form to Check Balance -->
+<h2>Check Balance</h2>
+<form id="checkBalanceForm">
+  <label for="checkAddress">Address:</label>
+  <input type="text" id="checkAddress" name="checkAddress" required><br><br>
   
-  <label for="amount">Amount:</label>
-  <input type="number" id="amount" name="amount" required><br><br>
-
-  <button type="submit">Approve</button>
-</form>
-
-<!-- Form to Transfer Tokens -->
-<h2>Transfer Tokens</h2>
-<form id="transferForm">
-  <label for="recipient">Recipient Address:</label>
-  <input type="text" id="recipient" name="recipient" required><br><br>
-
-  <label for="amountTransfer">Amount:</label>
-  <input type="number" id="amountTransfer" name="amountTransfer" required><br><br>
-
-  <button type="submit">Transfer</button>
+  <button type="submit">Check Balance</button>
 </form>
 
 <script>
   // Initialize ethers.js
-  let provider, signer, contract;
+  let provider, contract;
   const contractAddress = '0x8816e4c39472B5Ce851fB8cB271de419bF638f43';
   const contractABI = [
-    {
-      "inputs": [
-        {
-          "internalType": "address",
-          "name": "spender",
-          "type": "address"
-        },
-        {
-          "internalType": "uint256",
-          "name": "amount",
-          "type": "uint256"
-        }
-      ],
-      "name": "approve",
-      "outputs": [
-        {
-          "internalType": "bool",
-          "name": "",
-          "type": "bool"
-        }
-      ],
-      "stateMutability": "nonpayable",
-      "type": "function"
-    },
     {
       "inputs": [
         {
@@ -84,35 +45,6 @@
       ],
       "stateMutability": "view",
       "type": "function"
-    },
-    {
-      "inputs": [
-        {
-          "internalType": "address",
-          "name": "sender",
-          "type": "address"
-        },
-        {
-          "internalType": "address",
-          "name": "recipient",
-          "type": "address"
-        },
-        {
-          "internalType": "uint256",
-          "name": "amount",
-          "type": "uint256"
-        }
-      ],
-      "name": "transferFrom",
-      "outputs": [
-        {
-          "internalType": "bool",
-          "name": "",
-          "type": "bool"
-        }
-      ],
-      "stateMutability": "nonpayable",
-      "type": "function"
     }
   ];
 
@@ -122,8 +54,7 @@
       try {
         await ethereum.request({ method: 'eth_requestAccounts' });
         provider = new ethers.providers.Web3Provider(window.ethereum);
-        signer = provider.getSigner();
-        contract = new ethers.Contract(contractAddress, contractABI, signer);
+        contract = new ethers.Contract(contractAddress, contractABI, provider);
         console.log('Connected to contract');
       } catch (err) {
         console.error(err);
@@ -133,29 +64,14 @@
     }
   }
 
-  // Approve Form Submit
-  document.getElementById('approveForm').addEventListener('submit', async (e) => {
+  // Check Balance Form Submit
+  document.getElementById('checkBalanceForm').addEventListener('submit', async (e) => {
     e.preventDefault();
-    const spender = document.getElementById('spender').value;
-    const amount = document.getElementById('amount').value;
+    const address = document.getElementById('checkAddress').value;
 
     try {
-      const tx = await contract.approve(spender, amount);
-      console.log('Transaction sent:', tx);
-    } catch (err) {
-      console.error(err);
-    }
-  });
-
-  // Transfer Form Submit
-  document.getElementById('transferForm').addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const recipient = document.getElementById('recipient').value;
-    const amount = document.getElementById('amountTransfer').value;
-
-    try {
-      const tx = await contract.transferFrom(signer.getAddress(), recipient, amount);
-      console.log('Transaction sent:', tx);
+      const balance = await contract.balanceOf(address);
+      console.log('Balance:', ethers.utils.formatUnits(balance, 18)); // Converting Wei to ETH
     } catch (err) {
       console.error(err);
     }
