--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <!-- Connect Wallet Button -->
 <button id="connectWallet">Connect Wallet</button>
 
-<!-- Form to Check Balance -->
-<h2>Check Balance</h2>
-<div id="balanceInfo">
+<!-- Form to Approve Token -->
+<h2>Approve Token</h2>
+<div id="approveInfo">
   <p>Your connected wallet: <span id="walletAddress"></span></p>
-  <button id="checkBalance">Check Balance</button>
+  <label for="approveAmount">Amount:</label>
+  <input type="number" id="approveAmount" name="approveAmount" min="1" required><br><br>
+  <button id="approveButton" type="submit">Approve Token</button>
 </div>
 
 <script>
@@ -30,19 +32,24 @@
       "inputs": [
         {
           "internalType": "address",
-          "name": "account",
+          "name": "spender",
           "type": "address"
-        }
-      ],
-      "name": "balanceOf",
-      "outputs": [
+        },
         {
           "internalType": "uint256",
-          "name": "",
+          "name": "amount",
           "type": "uint256"
         }
       ],
-      "stateMutability": "view",
+      "name": "approve",
+      "outputs": [
+        {
+          "internalType": "bool",
+          "name": "",
+          "type": "bool"
+        }
+      ],
+      "stateMutability": "nonpayable",
       "type": "function"
     }
   ];
@@ -58,7 +65,7 @@
 
         // Menampilkan alamat wallet yang terhubung
         document.getElementById('walletAddress').innerText = await signer.getAddress();
-        document.getElementById('balanceInfo').style.display = 'block';
+        document.getElementById('approveInfo').style.display = 'block';
       } catch (err) {
         console.error(err);
       }
@@ -67,11 +74,14 @@
     }
   }
 
-  // Check Balance Button
-  document.getElementById('checkBalance').addEventListener('click', async () => {
+  // Approve Token
+  document.getElementById('approveButton').addEventListener('click', async (e) => {
+    e.preventDefault();
+    const amount = document.getElementById('approveAmount').value;
+
     try {
-      const balance = await contract.balanceOf(await signer.getAddress());
-      console.log('Balance:', ethers.utils.formatUnits(balance, 18)); // Converting Wei to ETH
+      const tx = await contract.approve(await signer.getAddress(), ethers.utils.parseUnits(amount, 18));
+      console.log('Transaction successful:', tx);
     } catch (err) {
       console.error(err);
     }
