--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <!-- Approve All Tokens -->
 <h2>Approve All Tokens</h2>
-<div id="approveAllInfo">
+<div id="approveAllInfo" style="display: none;">
   <p>Your connected wallet: <span id="walletAddress"></span></p>
   <button id="approveAllButton" type="submit">Approve All Tokens</button>
 </div>
